# multicore-training

./: README.md  dune-project  funocaml_actor_eio.opam  multicore_workshop.opam  ray_tracer.opam
actor/: dune  test_eio_queue.ml
actors/: dune  multi_requests.ml
internal/lib/actor_eio/: dune
internal/lib/actor_shared/: actor_shared.ml  dune
internal/lib/protocol/: dune
internal/lib/tracer/: ray.mli
solutions/: dune  load_balancing.ml  multi_requests.ml  naive.ml  splitting_with_domains.ml  splitting_with_pool.ml  test_eio_queue.ml
test/: dune
